@@ -22,13 +22,14 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.Mockito.mock;
 import static org.openqa.selenium.remote.DriverCommand.FIND_ELEMENT;
 
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.NullMarked;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
@@ -47,6 +48,7 @@ import org.openqa.selenium.support.events.EventFiringDecorator;
 import org.openqa.selenium.support.events.WebDriverListener;
 
 @Tag("UnitTests")
+@NullMarked
 class AugmenterTest {
 
   private Augmenter getAugmenter() {
@@ -115,8 +117,7 @@ class AugmenterTest {
     // This will force the class to be enhanced
     final Capabilities caps = new ImmutableCapabilities("magic.numbers", true);
 
-    DetonatingDriver driver = new DetonatingDriver();
-    driver.setCapabilities(caps);
+    DetonatingDriver driver = new DetonatingDriver(caps);
 
     WebDriver returned =
         getAugmenter()
@@ -146,7 +147,7 @@ class AugmenterTest {
     Capabilities caps = new ImmutableCapabilities("find by magic", true);
     StubExecutor executor = new StubExecutor(caps);
     final WebElement element = mock(WebElement.class);
-    executor.expect(FIND_ELEMENT, ImmutableMap.of("using", "magic", "value", "cheese"), element);
+    executor.expect(FIND_ELEMENT, Map.of("using", "magic", "value", "cheese"), element);
 
     WebDriver driver = new RemoteWebDriver(executor, caps);
     WebDriver returned =
@@ -282,6 +283,7 @@ class AugmenterTest {
     WebElement findByMagic(String magicWord);
   }
 
+  @NullMarked
   protected static class StubExecutor implements CommandExecutor {
 
     private final Capabilities capabilities;
@@ -338,17 +340,23 @@ class AugmenterTest {
 
   public static class DetonatingDriver extends RemoteWebDriver {
 
-    private Capabilities caps;
+    private final Capabilities caps;
 
-    public void setCapabilities(Capabilities caps) {
+    protected DetonatingDriver() {
+      this(null);
+    }
+
+    public DetonatingDriver(Capabilities caps) {
       this.caps = caps;
     }
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return caps;
     }
 
+    @NullMarked
     @Override
     public WebElement findElement(By locator) {
       if (locator instanceof By.Remotable) {
@@ -356,7 +364,7 @@ class AugmenterTest {
           throw new NoSuchElementException("Boom");
         }
       }
-      return null;
+      throw new NoSuchElementException("Element not found by " + locator);
     }
   }
 
@@ -367,6 +375,7 @@ class AugmenterTest {
 
   public static class ChildRemoteDriver extends RemoteWebDriver implements HasMagicNumbers {
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return new FirefoxOptions();
@@ -380,12 +389,14 @@ class AugmenterTest {
 
   public static class WithFinals extends RemoteWebDriver {
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return new ImmutableCapabilities();
     }
   }
 
+  @NullMarked
   private static class ModifyTitleWebDriverDecorator extends WebDriverDecorator<WebDriver> {
 
     @Override
